Run baseline in torch.compiled mode. Achieved 1.69-1.81x speedup.

--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
 [solution]
-name = "my-team-solution-v1"      # Solution name
-definition = "fused_moe"          # Track: fused_moe | sparse_attention | gated_delta_net
-author = "team-name"              # Team/author name
+name = "lmu-css-solution-v1"      # Solution name
+definition = "gdn_decode_qk4_v8_d128_k_last"  # Decode kernel for GDN track
+author = "lmu-css"                # Team/author name
 
 [build]
 language = "triton"               # triton | cuda
-entry_point = "kernel"            # Kernel function name
+entry_point = "kernel.py::kernel"         # Kernel function name
