- Use fused_recurrent_gated_delta_rule_fwd() as a basline. Achieves 8.06-9.76x speedups. - Use fullgraph=True on torch.compile. - We can dispatch the run_local.py to different algos

--- a/config.toml
+++ b/config.toml
@@ -5,4 +5,4 @@ author = "lmu-css"                # Team/author name
 
 [build]
 language = "triton"               # triton | cuda
-entry_point = "kernel.py::kernel"         # Kernel function name
+entry_point = "kernel.py::kernel_fla_recurrent"         # Kernel function name
